welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: type mismatch;
 found   : Int
 required: java.awt.Color
	setCouleurBrosse(decalage);
                         ^