welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {

var T = new Array[Color](getMondeHauteur());
T(0)=getCouleurSol();
for(i<-1 to getMondeHauteur()-1){
		avance();
		T(i)=getCouleurSol();
	}
for(n<-0 to getMondeHauteur()-1){
	for(k<-0 to getMondeHauteur()-1){recule()}
	gauche();avance();droite();
	val decalage=litMessage().toInt;
	setCouleurBrosse(decalage);
	baisseBrosse();
	leveBrosse();
	for(j<-decalage+1 to getMondeHauteur()-1){
		avance();
		setCouleurBrosse(T(j));
		baisseBrosse();
		leveBrosse();
	}
	for(h<-0 to decalage-1){
		setCouleurBrosse(T(h));
		baisseBrosse();
		leveBrosse();
		avance();
	}
}
}